[tool.poetry]
name = "airflow_concepts"
version = "0.1.0"
description = ""
authors = ["Fernando de Moraes Sedrez <fmsedrez@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
apache-airflow = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
